--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
             "email": "petyo@sterxa.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.4",
         "ext-json": "*",
-        "laravel/framework": "^8.0"
+        "laravel/framework": "^8.0",
+        "sterxa/laravel-ddd-helper": "^1"
     },
     "config": {
         "optimize-autoloader": true,
@@ -21,8 +22,20 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/",
+            "App\\": "src/App",
             "Domain\\": "src/Domain/"
         }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
+        ]
     }
 }
