--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/App",
-            "Domain\\": "src/Domain/"
+            "Domain\\": "src/Domain/",
+            "Support\\": "src/Support/"
         }
     },
     "scripts": {
