--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sterxa/laravel-ddd",
+    "name": "sterxa/laravel-ddd-boilerplate",
     "type": "project",
     "license": "MIT",
     "authors": [
