--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,14 @@
         "psr-4": {
             "App\\": "src/App",
             "Domain\\": "src/Domain/",
-            "Support\\": "src/Support/"
+            "Support\\": "src/Support/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
