--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,21 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4",
-        "ext-json": "*",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "sterxa/laravel-ddd-helper": "^1.2"
+        "laravel/horizon": "^5.1",
+        "laravel/tinker": "^2.0"
+    },
+    "require-dev": {
+        "sterxa/laravel-ddd-helper": "^1.2",
+        "barryvdh/laravel-ide-helper": "dev-master",
+        "facade/ignition": "^2.3.6",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3"
     },
     "config": {
         "optimize-autoloader": true,
@@ -21,6 +33,7 @@
         "sort-packages": true
     },
     "autoload": {
+        "files": ["src/helpers.php"],
         "psr-4": {
             "App\\": "src/App",
             "Domain\\": "src/Domain/",
@@ -45,5 +58,12 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+                "barryvdh/laravel-ide-helper"
+            ]
+        }
     }
 }
